fix: overflow

--- a/src/index.css
+++ b/src/index.css
@@ -355,6 +355,11 @@ p {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  @media screen and (max-width: 900px) {
+    padding: 0;
+    overflow-x: hidden;
+  }
 }
 
 /* Custom Scrollbar */
